# localAI

./: .gitattributes  .gitignore  .gitmodules  README.md  gradle.properties  settings.gradle.kts  tokenizers-cpp.patch
app/: build.gradle.kts
app/src/androidTest/java/io/github/xororz/localdream/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/cvtbase/: clip.mnn.slimmed  clip_skip_2.mnn.slimmed  tokenizer.json  unet.mnn  vae_decoder.mnn  vae_encoder.mnn
app/src/main/cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  SampleApp.patch  build.bat  build.sh
app/src/main/cpp/src/: Config.hpp  DPMSolverMultistepScheduler.hpp  QnnModel.hpp  SDStructure.hpp  SDUtils.hpp  SafeTensor2MNN.hpp  SafeTensorReader.hpp  main.cpp
app/src/main/java/io/github/xororz/localdream/: MainActivity.kt
app/src/main/java/io/github/xororz/localdream/data/: DownloadManager.kt  FileVerification.kt  Model.kt  Preferences.kt
app/src/main/java/io/github/xororz/localdream/navigation/: Navigation.kt
app/src/main/java/io/github/xororz/localdream/service/: BackendService.kt  BackgroundGenerationService.kt
app/src/main/java/io/github/xororz/localdream/ui/screens/: CropImageScreen.kt  InpaintScreen.kt  ModelListScreen.kt  ModelRunScreen.kt
app/src/main/java/io/github/xororz/localdream/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/io/github/xororz/localdream/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
